adding another run method for tests, to the build